src/objects/Aircraft_Custom_Configuration__c/Aircraft_Custom_Configuration__c.object-meta.xml
<CustomObject>
    <label>Aircraft Custom Configuration</label>
    <nameField>
        <label>Aircraft LRU Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Custom Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>