src/objects/Aircraft_Custom_Configuration__c/fields/AIRCRAFT_CLASSIFICATION_CD__c.field-meta.xml
<CustomField>
    <fullName>AIRCRAFT_CLASSIFICATION_CD__c</fullName>
    <label>Aircraft Classification Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>