src/objects/Aircraft_Custom_Configuration__c/fields/Aircraft_Platform_Standard_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Platform_Standard_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Platform Standard Configuration</label>
    <referenceTo>Aircraft_Platform_Configuration__c</referenceTo>
    <relationshipLabel>Aircraft Custom Configuration</relationshipLabel>
    <relationshipName>Aircraft_Custom_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>