src/objects/Aircraft_Custom_Configuration__c/fields/AVEL_MECH_IND__c.field-meta.xml
<CustomField>
    <fullName>AVEL_MECH_IND__c</fullName>
    <label>AVEL Mech. Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>