src/objects/Aircraft_Custom_Configuration__c/fields/DESCRIPTION_NM__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION_NM__c</fullName>
    <label>Description Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>