src/objects/Aircraft_Custom_Configuration__c/fields/Fleet_Asset_Detail__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Asset_Detail__c</fullName>
    <label>Fleet Asset Detail</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Aircraft Custom Configuration</relationshipLabel>
    <relationshipName>Aircraft_Custom_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>