src/objects/Aircraft_Custom_Configuration__c/fields/SITE_CD__c.field-meta.xml
<CustomField>
    <fullName>SITE_CD__c</fullName>
    <label>Site Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>