src/objects/Aircraft_Custom_Configuration__c/fields/Sub_System__c.field-meta.xml
<CustomField>
    <fullName>Sub_System__c</fullName>
    <label>Sub System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>